gcc/testsuite/rust/rustc/ui/parser/diff-markers/tuple-struct_dg.rs
struct S(
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
    u8,
=======
    i8,
>>>>>>> branch
);

